--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: node_js
-node_js: '12.16.1'
-install:
-  - npm ci
-
+node_js:
+  - "node"
+script:
+  - npm test
+after_success: npm run coverage
