--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "src/index.js",
   "dependencies": {},
   "devDependencies": {
+    "coveralls": "^3.0.11",
     "mocha": "^7.1.1",
     "nyc": "^15.0.0"
   },
   "scripts": {
-    "test": "nyc mocha"
+    "test": "nyc --reporter=html --reporter=text mocha",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
