--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "dependencies": {},
   "devDependencies": {
     "coveralls": "^3.0.11",
+    "install": "^0.13.0",
     "mocha": "^7.1.1",
+    "mocha-lcov-reporter": "^1.3.0",
     "nyc": "^15.0.0"
   },
   "scripts": {
-    "test": "nyc --reporter=html --reporter=text mocha",
+    "test": "nyc mocha",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
